--- a/src/block/style.scss
+++ b/src/block/style.scss
@@ -5,8 +5,18 @@
  */
 
 .wp-block-cgb-block-hero-block  {
-  background: $red;
-  color: $black;
   margin: 0 auto;
   padding: 2rem;
+}
+.has-text-align-left {
+  text-align: left;
+}
+.has-text-align-right {
+  text-align: right;
+  margin-left: auto;
+}
+.has-text-align-center {
+  text-align: center;
+  margin: 0 auto;
+  display: block;
 }
